[package]
name = "include-folder-macro"
version = "0.1.1"
edition = "2024"
description = "A macro crate for generating `pub mod` sentenses"
license-file = "LICENSE"
license = "BSD-2-Clause"

[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tempfile = "3"